tests/error/func_sig_differ.gw
// [contains] function signatures differ in return type
 function void test(){}
function int  test(){}
